# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "phronesiser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Add provably safe ethical constraints to AI agent decision-making via Phronesis"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/phronesiser"
keywords = ["phrones", "acceleration", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
handlebars = "6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
